start with error handling for the auth service and controller first thing